# holon-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MISSING-PRIMITIVES.md  PARITY.md  README.md
benches/: benchmarks.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  DIMENSIONS.md  ENCODING.md  PARITY.md
examples/: attack_variant_detection.rs  byte_match_derivation.rs  compositional_recall.rs  config_drift_remediation.rs  explainable_forensics.rs  improved_detection.rs  magnitude_aware_encoding.rs  online_anomaly_memory.rs  payload_anomaly_detection.rs  pure_vector_rate.rs  rate_limit_mitigation.rs  streaming_changepoint.rs  targeted_rate_limiting.rs  temporal_encoding.rs  walkable_detection.rs  walkable_rate.rs  zero_hardcode_detection.rs
src/: accumulator.rs  encoder.rs  error.rs  lib.rs  primitives.rs  scalar.rs  similarity.rs  vector.rs  vector_manager.rs  walkable.rs
src/highlevel/: client.rs  mod.rs
src/kernel/: accumulator.rs  atom_registry.rs  encoder.rs  holon_ast.rs  mod.rs  primitives.rs  scalar.rs  similarity.rs  vector_manager.rs  walkable.rs
src/memory/: engram.rs  journal.rs  mod.rs  reckoner.rs  subspace.rs
