[package]
name = "holon"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Holon Contributors"]
description = "Programmatic Neural Memory using Vector Symbolic Architectures"
license = "MIT"
repository = "https://github.com/watmin/holon-rs"
homepage = "https://github.com/watmin/holon-rs"
documentation = "https://docs.rs/holon"
readme = "README.md"
keywords = ["vsa", "hdc", "hyperdimensional", "vector", "similarity"]
categories = ["science", "data-structures", "encoding"]
exclude = ["assets/**", "docs/**"]

[lib]
name = "holon"
path = "src/lib.rs"

[features]
default = []
# Enable SIMD-accelerated similarity computations (up to 200x faster)
simd = ["simsimd"]

[dependencies]
# Random number generation (deterministic)
rand = "0.8"
rand_chacha = "0.3"

# Hashing for deterministic vector generation
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# N-dimensional arrays for vectorized linear algebra (CCIPCA, accumulators)
ndarray = "0.17"

# Optional: SIMD-accelerated similarity (enable with --features simd)
simsimd = { version = "6.5", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
